Try to fix problem with image on mobile

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 img {
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
 }
 
 html {
